Closed Bug 1751603 Opened 3 years ago Closed 3 years ago

[Accelerated Canvas] visual corruption on https://codepen.io/thebabydino/pen/fojzu

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
98 Branch
Tracking Status
firefox98 --- fixed

People

(Reporter: mayankleoboy1, Assigned: lsalzman)

References

(Blocks 1 open bug, )

Details

Attachments

(2 files)

enable accelerated canvas
go to https://codepen.io/thebabydino/pen/fojzu

AR: Visual corruption

Blocks: gpu-canvas
Attached file about:support

The intention of the if-clause in MatchesPath was was to early-out with false if
the path geometry doesn't actually match as an artifact of how earlier versions of
this code was written. Due to an accidental typo, the path comparison for this case
got inverted. This fixes that by just cleaning up the inverted mess to be easier to
read in the first place.

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/dd77e98945c1 Fix inverted path comparison in PathCacheEntry::MatchesPath. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: