Bug 1751603 - Fix inverted path comparison in PathCacheEntry::MatchesPath. r=aosmond

The intention of the if-clause in MatchesPath was was to early-out with false if
the path geometry doesn't actually match as an artifact of how earlier versions of
this code was written. Due to an accidental typo, the path comparison for this case
got inverted. This fixes that by just cleaning up the inverted mess to be easier to
read in the first place.

Differential Revision: https://phabricator.services.mozilla.com/D136694